# YouTube.rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  _setup_env.sh  _typos.toml  clippy.toml  deploy_prod.sh  docker-compose.yml  nginx.conf  nginx.conf.template  nginx_generate.sh  package.json
.sqlx/: query-0877d557703387a0acb3681da36387a62cca0db0757774cd937e54c06cac08bb.json  query-099e5d21c81a1ae6df29da391646222b939c80c2cee6757c7e572da4c993f034.json  query-0ed915881444ad92fa5ce8b7d6d487ec372b150c98ade5cd034bba9980901a41.json  query-257f861acd70f366d45d24648df525f77d46207daedfb4c3ef5b6e0d27e722a9.json  query-25bb75612509a21d147ea5129bb772fd92238549df780e12a4efb05a758b6110.json  query-40170e5b1fbfa49980ed595e05b1eccae7a62d52433bb2fc211fa7b835f4c10f.json  query-60f105db5a6b90ff04790580a99d77d838cf3f10ee59be6fd7280de50846ce63.json  query-817523fbb9976f202ef23d05287d17aecda9081b80656ee44b5ead8056708f87.json  query-843a0d54af9348340e0ff3bd683980a8cdbd437d0a4f403268753e5686fb6189.json  query-b19225aec98af1ea17bd6172c99ab313082d1ab41e32e909a199745295b47a68.json  query-cecfd57043d6201bf10dcc37b1c2f805b8e11c9f368e2902909d9d5ed5a462c2.json  query-f92ae479380bba65ccfc84fc63e7966611c5afeea5b8e3dc77c4508988a25fe4.json  query-fc9c4254b0a9342f00205f38ca175273f0679aecd67d7ca73bae15c5fe561452.json
migrations/: 20260305113540_create_users_table.sql  20260305120655_create_user_oauth_providers_table.sql  20260309132442_create_videos_table.sql  20260309132625_create_video_views_table.sql  20260309132717_create_video_likes_table.sql  20260309132817_create_video_comments_table.sql  (+6 more)
src/application/: Cargo.toml
src/application/src/: _helpers.rs  lib.rs
src/application/src/_tests/repositories/: in_memory_channel_repository.rs  in_memory_comment_like_repository.rs  in_memory_comment_repository.rs  in_memory_oauth_repository.rs  in_memory_subscription_repository.rs  in_memory_user_repository.rs  in_memory_video_reaction_repository.rs  in_memory_video_repository.rs  in_memory_video_view_repository.rs  mod.rs
src/application/src/_tests/services/: mock_token_service.rs  mod.rs
src/application/src/commands/: auth.rs  comment.rs  comment_like.rs  history.rs  mod.rs  subscription.rs  video_reaction.rs  video_view.rs
src/application/src/dtos/: _utils.rs  channel.rs  mod.rs  subscription.rs  user.rs  video.rs
src/application/src/queries/: channel.rs  comments.rs  history.rs  liked_videos.rs  mod.rs  subscription.rs  video.rs
src/application/src/services/: mod.rs  oauth_service.rs  token_service.rs
src/domain/: Cargo.toml
src/domain/src/: lib.rs
src/domain/src/_shared/: errors.rs  mod.rs
src/domain/src/_shared/value_objects/: mod.rs  slug.rs  url.rs
src/domain/src/channel/: entity.rs  mod.rs  repository.rs
src/domain/src/comment/: entity.rs  repository.rs
src/domain/src/subscription/: mod.rs  repository.rs
src/domain/src/user/: entity.rs  mod.rs  repository.rs
src/domain/src/user/value_objects/: email.rs  mod.rs  oauth.rs
src/domain/src/video/: entity.rs  repository.rs
src/infrastructure/: Cargo.toml
src/infrastructure/src/repositories/: mod.rs  pg_channel_repository.rs  pg_comment_repository.rs  pg_subscription_repository.rs  pg_user_repository.rs  pg_video_reaction_repository.rs  pg_video_repository.rs  pg_video_tag_repository.rs  pg_video_view_repository.rs
src/infrastructure/src/services/: mod.rs
src/infrastructure/src/services/oauth/: google_service.rs  mod.rs
src/infrastructure/src/services/token/: jwt_service.rs  mod.rs
src/interface/web/: Cargo.toml
src/interface/web/src/: app.rs  lib.rs  shell.rs
src/interface/web/src/api/: mod.rs
src/interface/web/src/api/_dtos/: channel.rs  comment.rs  mod.rs  subscription.rs  video.rs
src/interface/web/src/api/_errors/: app_server_error.rs  error.rs  mod.rs
src/interface/web/src/api/_helpers/: cookies.rs  mod.rs
src/interface/web/src/api/channel/: get_channel_data.rs  mod.rs
src/interface/web/src/api/comment/: get_comments.rs  handle_comment.rs  handle_like.rs  mod.rs
src/interface/web/src/api/subscription/: get_subscription.rs  handle_subscription.rs  mod.rs
src/interface/web/src/api/user/: auth.rs
src/interface/web/src/api/video/: get_history_videos.rs  get_home_videos.rs  get_video.rs  get_video_list.rs  handle_history.rs  handle_reaction.rs  handle_view.rs  mod.rs  post_view.rs
src/interface/web/src/components/: _helpers.rs  mod.rs
src/interface/web/src/components/channel/: header.rs  mod.rs  video_section.rs
src/interface/web/src/components/comments/: comment.rs  comment_composer.rs  comment_feed.rs  comment_like.rs  mod.rs
src/interface/web/src/components/layout/: sidebar.rs
src/interface/web/src/components/layout/header/: header.rs  header_left.rs  header_right.rs  mod.rs  search_bar.rs
src/interface/web/src/components/layout/header/buttons/: menu_items.rs  signin.rs
src/interface/web/src/components/layout/header/dropdown/: dropdown.rs  root_menu.rs  sub_menu.rs
src/interface/web/src/components/ui/: divider.rs  dividers.rs  icons.rs  loader.rs  mod.rs  not_found.rs  require_auth.rs
src/interface/web/src/components/ui/icons/: icons.rs  mod.rs
src/interface/web/src/components/ui/layout/header/: header.rs  header_left.rs  header_right.rs
src/interface/web/src/components/ui/layout/header/dropdown/: dropdown.rs  root_menu.rs
src/interface/web/src/components/video/: mod.rs  next_videos.rs  reaction.rs  video_card.rs  video_player.rs
src/interface/web/src/components/videos/: mod.rs  next_videos.rs  video_card.rs  video_feed.rs
src/interface/web/src/components/videos/video_player/: mod.rs  reaction.rs  subscription.rs  video_player.rs
src/interface/web/src/context/: context.rs  mod.rs  ressources.rs  theme.rs
src/interface/web/src/hooks/: mod.rs  use_google_signin.rs
src/interface/web/src/routes/protected/: history.rs  liked_videos.rs
src/interface/web/src/routes/public/: channel.rs  history.rs  home.rs  liked_videos.rs  mod.rs  results.rs  signin.rs  watch.rs
src/server/: Cargo.toml
src/server/src/: config.rs  fallback.rs  main.rs  middleware.rs  router.rs
(+52 files in other folders)
