[workspace]
members = [
    "src/domain",
    "src/application",
    "src/infrastructure",
    "src/interface",
    "src/server",
]
resolver = "3"

# ======================
# Workspace-level dependencies
# ======================
[workspace.dependencies]
# Core
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
axum-macros = "0.4"
bytes = "1"
config = "0.14"
chrono = "0.4.43"
dotenvy = "0.15"
http = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time", "json"] }
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", default-features = false, features = ["v4", "v7", "serde"] }
urlencoding = "2"
validator = { version = "0.20", features = ["derive"] }

# Leptos
leptos = { version = "0.8", features = ["nightly"] }
leptos_axum = "0.8.7"
leptos_meta = "0.8"
leptos_router = { version = "0.8", features = ["nightly"] }
cookie = "0.18"

# WASM / Frontend
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "Node", "EventTarget", "Event", "HtmlInputElement"] }

# ======================
# Profile configuration
# ======================
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
debug = false
lto = true

# ======================
# Leptos configuration
# ======================
[[workspace.metadata.leptos]]
name = "youtube"

bin-package = "server"
lib-package = "interface"

site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
assets-dir = "public"

site-addr = "0.0.0.0:3000"
reload-port = 3001

browserquery = "defaults"
watch = false
env = "DEV"

# Features
bin-features = []
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false
