[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
interface = { path = "../interface", default-features = false, features = ["server"] }
infrastructure = { path = "../infrastructure" }
application = { path = "../application" }
domain = { path = "../domain" }

leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true

dotenv = "0.15"

axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["cookie", "cookie-private"] }
axum-macros.workspace = true
dotenvy.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tower-http.workspace = true
log.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sqlx.workspace = true
cookie.workspace = true