[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Frontend / Leptos
leptos.workspace = true
leptos-use = "0.18.0"
leptos_meta.workspace = true
leptos_router.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
web-sys.workspace = true
anyhow.workspace = true
bytes.workspace = true
urlencoding.workspace = true

# Backend (optionnal = activate with feature "server")
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
validator = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
rand = { version = "0.8", optional = true }
cookie = { version = "0.18", features = ["secure", "private"], optional = true }

application = { path = "../../application", version = "0.1.0", optional = true }
infrastructure = { path = "../../infrastructure", version = "0.1.0", optional = true }
domain = { path = "../../domain", version = "0.1.0", optional = true }

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos-use/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:axum-extra",
    "dep:leptos_axum",
    "dep:tracing",
    "dep:sqlx",
    "dep:validator",
    "dep:rand",
    "dep:cookie",
    "dep:application",
    "dep:infrastructure",
    "dep:domain",
]
server = ["ssr"]
